Added link to open source code

--- a/weather-app.html
+++ b/weather-app.html
@@ -60,86 +60,94 @@
       <h3 id="description">Cloudy</h3>
       <hr />
 
-      <div class="row">
-        <div class="col-2">
-          Mon
-          <img
-            class="forecast-first"
-            src="images/sunny.png"
-            alt="Sunny weather icon"
-          />
-          <div class="row">
-            <div id="low" class="col-1">12</div>
-            <div id="high" class="col-1">25</div>
+      <div class="container-forecast">
+        <div class="row">
+          <div class="col-2">
+            Mon
+            <img
+              class="forecast-first"
+              src="images/sunny.png"
+              alt="Sunny weather icon"
+            />
+            <div class="row">
+              <div id="low" class="col-1">12</div>
+              <div id="high" class="col-1">25</div>
+            </div>
           </div>
-        </div>
 
-        <div class="col-2">
-          Tue
-          <img
-            class="forecast-second"
-            src="images/sunny.png"
-            alt="Sunny weather icon"
-          />
-          <div class="row">
-            <div id="low" class="col-1">12</div>
-            <div id="high" class="col-1">25</div>
+          <div class="col-2">
+            Tue
+            <img
+              class="forecast-second"
+              src="images/sunny.png"
+              alt="Sunny weather icon"
+            />
+            <div class="row">
+              <div id="low" class="col-1">12</div>
+              <div id="high" class="col-1">25</div>
+            </div>
           </div>
-        </div>
 
-        <div class="col-2">
-          Wed
-          <img
-            class="forecast-third"
-            src="images/sunny.png"
-            alt="Sunny weather icon"
-          />
-          <div class="row">
-            <div id="low" class="col-1">12</div>
-            <div id="high" class="col-1">25</div>
+          <div class="col-2">
+            Wed
+            <img
+              class="forecast-third"
+              src="images/sunny.png"
+              alt="Sunny weather icon"
+            />
+            <div class="row">
+              <div id="low" class="col-1">12</div>
+              <div id="high" class="col-1">25</div>
+            </div>
           </div>
-        </div>
 
-        <div class="col-2">
-          Thu
-          <img
-            class="forecast-fourth"
-            src="images/sunny.png"
-            alt="Sunny weather icon"
-          />
-          <div class="row">
-            <div id="low" class="col-1">12</div>
-            <div id="high" class="col-1">25</div>
+          <div class="col-2">
+            Thu
+            <img
+              class="forecast-fourth"
+              src="images/sunny.png"
+              alt="Sunny weather icon"
+            />
+            <div class="row">
+              <div id="low" class="col-1">12</div>
+              <div id="high" class="col-1">25</div>
+            </div>
           </div>
-        </div>
 
-        <div class="col-2">
-          Fri
-          <img
-            class="forecast-fifth"
-            src="images/sunny.png"
-            alt="Sunny weather icon"
-          />
-          <div class="row">
-            <div id="low" class="col-1">12</div>
-            <div id="high" class="col-1">25</div>
+          <div class="col-2">
+            Fri
+            <img
+              class="forecast-fifth"
+              src="images/sunny.png"
+              alt="Sunny weather icon"
+            />
+            <div class="row">
+              <div id="low" class="col-1">12</div>
+              <div id="high" class="col-1">25</div>
+            </div>
           </div>
-        </div>
 
-        <div class="col-2">
-          Sat
-          <img
-            class="forecast-fifth"
-            src="images/sunny.png"
-            alt="Sunny weather icon"
-          />
-          <div id="temp" class="row">
-            <div id="low" class="col-1">12</div>
-            <div id="high" class="col-1">25</div>
+          <div class="col-2">
+            Sat
+            <img
+              class="forecast-fifth"
+              src="images/sunny.png"
+              alt="Sunny weather icon"
+            />
+            <div id="temp" class="row">
+              <div id="low" class="col-1">12</div>
+              <div id="high" class="col-1">25</div>
+            </div>
           </div>
         </div>
       </div>
     </div>
+    <small>
+      <a href="https://github.com/vc21/my-weather-app" target="_blank"
+        >Open-source code</a
+      >
+      by Vivian Choi
+    </small>
     <script src="src/index.js"></script>
   </body>
 </html>
